--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         "Never scan unknown QR codes.",
         "They can lead to malicious websites.",
         "=============================="
+        "უცნობი QR Code-ის დასკანერება საშიშია"
+        "აი ასე,  დაასკანერე უცნობი QR კოდი და მოხვდი სადღაც, სადაც არც გეგმავდი." 
+        "ხუმრობაა - მაგრამ ხომ შეიძლება სერიოზულ პრობლემად იქცეს?! "
+        "QR კოდს შეუძლია გადაგიყვანოს ვირუსზე, ყალბ ბანკის ვებ-გვერდზე ან ისეთ საიტზე, რომელიც შენი მონაცემების მოპარვას ცდილობს."
+        "ასე რომ, შემდეგში სანამ შავ კვადრატს დაასკანერებ, დაფიქრდი: „ეს ნამდვილად სანდო წყაროა?“"
+        "თუ არა - გირჩევნია არ შეეხო. QR კოდი ზედმეტად მარტივია მოსატყუებლად, სწორედ ამიტომ სიფრთხილე აუცილებელია."
     ];
 
     let i = 0;
@@ -66,3 +72,4 @@
 
 </body>
 </html>
+
