--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         "RESULT: You're safe 😄",
         "Never scan unknown QR codes.",
         "They can lead to malicious websites.",
-        "=============================="
-        "უცნობი QR code-ის დასკანერება საშიშია!"
-        "აი ასე,  დაასკანერე უცნობი QR კოდი და მოხვდი სადღაც, სადაც არც გეგმავდი." 
-        "ხუმრობაა - მაგრამ ხომ შეიძლება სერიოზულ პრობლემად იქცეს?! "
-        "QR კოდს შეუძლია გადაგიყვანოს ვირუსზე, ყალბ ბანკის ვებ-გვერდზე ან ისეთ საიტზე, რომელიც შენი მონაცემების მოპარვას ცდილობს."
-        "ასე რომ, შემდეგში სანამ შავ კვადრატს დაასკანერებ, დაფიქრდი: „ეს ნამდვილად სანდო წყაროა?“"
-        "თუ არა - გირჩევნია არ შეეხო. QR კოდი ზედმეტად მარტივია მოსატყუებლად, სწორედ ამიტომ სიფრთხილე აუცილებელია."
+        "==============================",
+        "უცნობი QR code-ის დასკანერება საშიშია!",
+        "აი ასე,  დაასკანერე უცნობი QR კოდი და მოხვდი სადღაც, სადაც არც გეგმავდი." ,
+        "ხუმრობაა - მაგრამ ხომ შეიძლება სერიოზულ პრობლემად იქცეს?! ",
+        "QR კოდს შეუძლია გადაგიყვანოს ვირუსზე, ყალბ ბანკის ვებ-გვერდზე ან ისეთ საიტზე, რომელიც შენი მონაცემების მოპარვას ცდილობს.",
+        "ასე რომ, შემდეგში სანამ შავ კვადრატს დაასკანერებ, დაფიქრდი: „ეს ნამდვილად სანდო წყაროა?“",
+        "თუ არა - გირჩევნია არ შეეხო. QR კოდი ზედმეტად მარტივია მოსატყუებლად, სწორედ ამიტომ სიფრთხილე აუცილებელია.",
         "=============================="
     ];
 
@@ -72,5 +72,6 @@
 
 </body>
 </html>
+
 
 
